# EmbeddedArt

./: .gitignore  CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/EaMultiThreadApplication/: CMakeLists.txt  Main.c  Osal.c  Osal.h
Libraries/: CMakeLists.txt
Libraries/EaCircularBuffer/: CMakeLists.txt  EaCircularBuffer.c  EaCircularBuffer.h
Libraries/EaCore/: CMakeLists.txt  EaCommon.h  EaUtilities.c  EaUtilities.h
Tests/UnitTest/: CMakeLists.txt
